# ChatManager

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.toml
src/telegram_bot/: .env.example  __main__.py  config.py  main.py
src/telegram_bot/experiments/: censor_ai.py
src/telegram_bot/handlers/: __init__.py  registry.py
src/telegram_bot/handlers/common/: bot_added.py
src/telegram_bot/handlers/common/commands/: help.py  start.py
src/telegram_bot/handlers/moderation/: echo.py
src/telegram_bot/handlers/moderation/commands/: __init__.py  ban.py  blacklist.py  filters.py  kick.py  mute.py  warn.py
src/telegram_bot/i18n/: __init__.py  generate_keys.py  keys.py  loader.py  translate.py  types.py
src/telegram_bot/i18n/locales/: en.json  ru.json  ua.json
src/telegram_bot/models/: filters.py  log.py  user.py
src/telegram_bot/repositories/: __init__.py  blacklist.py  chat_settings.py  chats.py  db.py  logs.py  users.py  warn.py
src/telegram_bot/services/api/: post_service.py
src/telegram_bot/services/db/: __init__.py  blacklist_service.py  chat_service.py  chat_settings_service.py  logging_service.py  users_service.py  warns_service.py
src/telegram_bot/services/telegram/: build_messages.py  display.py  filters_summary.py  message_links.py  processor.py  resolve_targets.py  types.py
tests/telegram_bot/: test_config.py
tests/telegram_bot/experiments/: test_censor_ai.py
tests/telegram_bot/experiments/data/: offensive_samples.py
tests/telegram_bot/handlers/common/: test_bot_added.py
(+25 files in other folders)
